--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,11 +12,11 @@
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
-        <li {% if page.title == "Home" %}class="active"{% endif %}><a href="{{"/" | prepend: site.baseurl }}">HOME</a></li>
-        <li {% if page.title == "Blog" %}class="active"{% endif %}><a href="{{"/blog/" | prepend: site.baseurl }}">BLOG</a></li>
-        <li {% if page.title == "Portfolio" %}class="active"{% endif %}><a href="{{"/portfolio/" | prepend: site.baseurl }}">PORTFOLIO</a></li>
-        <li {% if page.title == "About" %}class="active"{% endif %}><a href="{{"/about/" | prepend: site.baseurl }}">ABOUT</a></li>
-        <li {% if page.title == "Contact" %}class="active"{% endif %}><a href="{{"/contact/" | prepend: site.baseurl }}">CONTACT</a></li>
+        <li {% if page.title == "HTML" %}class="active"{% endif %}><a href="{{"/" | prepend: site.baseurl }}">HTML</a></li>
+        <li {% if page.title == "CSS" %}class="active"{% endif %}><a href="{{"/blog/" | prepend: site.baseurl }}">CSS</a></li>
+        <li {% if page.title == "JS" %}class="active"{% endif %}><a href="{{"/portfolio/" | prepend: site.baseurl }}">JavaScript</a></li>
+        <li {% if page.title == "Software" %}class="active"{% endif %}><a href="{{"/about/" | prepend: site.baseurl }}">Software</a></li>
+        <li {% if page.title == "About" %}class="active"{% endif %}><a href="{{"/contact/" | prepend: site.baseurl }}">About</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
