fixed graphics on index.html

--- a/_includes/header2.html
+++ b/_includes/header2.html
@@ -6,6 +6,7 @@
                 <h5>Click on the Software link to set up your computer.</h5>
                 <h5>Click any other link to get started.</h5>				
             </div>
+        </div>
 <div class="screen monitor">
   <div class="content">
     <div class="pg">
