--- a/_includes/header2.html
+++ b/_includes/header2.html
@@ -1,3 +1,4 @@
+<div id="headerwrap">
 <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -66,4 +67,6 @@
   <div class="shadow"></div>        
   </div>
   
-</div>
+</div> <!-- end container -->
+    
+</div> <!-- end header wrap -->
