--- a/_layouts/project_old.html
+++ b/_layouts/project_old.html
@@ -9,13 +9,13 @@ layout: default
 
         {% include carousel.html %}
 
-        <div class="col-lg-6 col-lg-offset-1">
+        <div class="col-lg-5 col-lg-offset-1">
             <div class="spacing"></div>
 
             {{ content }}
 
         </div>
-        <div class="col-lg-3 col-lg-offset-1">
+        <div class="col-lg-4 col-lg-offset-1">
             <div class="spacing"></div>
             <h4>Project Details</h4>
             <div class="hline"></div>
@@ -23,9 +23,10 @@ layout: default
             <p><b>Author:</b> {{ page.author }}</p>
             <p><b>Categories:</b> {{ page.categories }}</p>
             <p><b>Tagged:</b> Flat, UI, Development</p>
+            <p><b>Client:</b> {{ page.client }}</p>
+            <p><b>Website:</b> <a href="{{ page.website }}">{{ page.website }}</a></p>
         </div>
     </div><!--/row -->
 </div><!--/container -->
-<div style="margin-left:auto; margin-right:auto; display:block">
-{% include portfolio.html title="Other Projects You Might Enjoy:" limit=5 %}
-</div>	 
+	 
+{% include portfolio.html title="Related Works." limit=5 %}
