--- a/_layouts/software.html
+++ b/_layouts/software.html
@@ -9,7 +9,7 @@ layout: default
         <!-- SINGLE POST -->
         <div class="col-lg-12">
             <!-- Blog Post  -->
-            <p><img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ page.img }}"></p>
+            <p><img class="img-responsive" src="{{ "/assets/img/software/" | prepend: site.baseurl }}{{ page.img }}"></p>
             <a href="{{ page.url | prepend: site.baseurl }}"><h3 class="ctitle text-center">{{ page.title }}</h3></a>
             <p><csmall>{{ page.date | date: "%b %-d, %Y" }}. | By: {{ page.author }}</csmall></p>
               
@@ -25,7 +25,6 @@ layout: default
             </p> -->
         </div><!--/col-lg-12 -->
         
-  <!--       {% include sidebar.html %} -->
 
     </div><!--/row -->
 </div><!--/container -->
