--- a/_layouts/software.html
+++ b/_layouts/software.html
@@ -9,7 +9,7 @@ layout: default
         <!-- SINGLE POST -->
         <div class="col-lg-12">
             <!-- Blog Post  -->
-            <p><img class="img-responsive" src="{{ "/assets/img/" | prepend: site.baseurl }}{{ page.img }}"></p>
+            <p><img class="img-responsive" src="{{ "/assets/img/850x400.png" | prepend: site.baseurl }}"></p>
             <a href="{{ page.url | prepend: site.baseurl }}"><h3 class="ctitle text-center">{{ page.title }}</h3></a>
             <p><csmall>{{ page.date | date: "%b %-d, %Y" }}. | By: {{ page.author }}</csmall></p>
               
