--- a/_layouts/software.html
+++ b/_layouts/software.html
@@ -10,8 +10,8 @@ layout: default
         <div class="col-lg-12">
             <!-- Blog Post  -->
             <p><img class="img-responsive" src="{{ "/assets/img/850x400.png" | prepend: site.baseurl }}"></p>
-            <a href="{{ page.url | prepend: site.baseurl }}"><h3 class="ctitle text-center">{{ page.title }}</h3></a>
-            <p><csmall>{{ page.date | date: "%b %-d, %Y" }}. | By: {{ page.author }}</csmall></p>
+            <a href="{{ page.url | prepend: site.baseurl }}"><h3 class="ctitle text-center">{{ page.title }} to use when making your websites</h3></a>
+            
               
             {{ content }}
 
