--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,9 @@
 
     <!-- Custom styles for this template -->
     <link href="{{ "/assets/css/style.css" | prepend: site.baseurl }}" rel="stylesheet">
-    <link href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">     
+
+<!--     <link href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}" rel="stylesheet"> -->
     <!-- <link href="{{ "/assets/css/computer.css" | prepend: site.baseurl }}" rel="stylesheet"> -->
     
     <!-- Custom CSS -->
